--- a/Source/ImGui Standalone/ImGui Standalone.vcxproj
+++ b/Source/ImGui Standalone/ImGui Standalone.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="src\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\Drawing.h" />
     <ClInclude Include="include\ImGui\imconfig.h" />
     <ClInclude Include="include\ImGui\imgui.h" />
@@ -176,9 +177,17 @@
     <ClInclude Include="src\utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="C:\Users\hetong\Desktop\pic\cherry.png" />
+    <Image Include="C:\Users\hetong\Desktop\pic\OIG (2).jpg" />
+    <Image Include="icon1.ico" />
+    <Image Include="icon2.ico" />
+    <Image Include="pic\wsl.ico" />
     <Image Include="src\cherry.jpg" />
     <Image Include="src\run.gif" />
     <Image Include="src\卡牌.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ImGui Standalone.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
