--- a/Source/ImGui Standalone/ImGui Standalone.vcxproj.filters
+++ b/Source/ImGui Standalone/ImGui Standalone.vcxproj.filters
@@ -101,6 +101,15 @@
     <ClInclude Include="resource.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="src\custom.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="src\icon_font_awesome4.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="src\icons.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\run.gif">
@@ -112,16 +121,7 @@
     <Image Include="src\cherry.jpg">
       <Filter>Fichiers de ressources</Filter>
     </Image>
-    <Image Include="C:\Users\hetong\Desktop\pic\OIG (2).jpg">
-      <Filter>Fichiers de ressources</Filter>
-    </Image>
     <Image Include="C:\Users\hetong\Desktop\pic\cherry.png">
-      <Filter>Fichiers de ressources</Filter>
-    </Image>
-    <Image Include="icon1.ico">
-      <Filter>Fichiers de ressources</Filter>
-    </Image>
-    <Image Include="icon2.ico">
       <Filter>Fichiers de ressources</Filter>
     </Image>
     <Image Include="pic\wsl.ico">
